# dive-computer

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
conf/: dive_parameters.yml  referential.yml
src/dive_computer/: __init__.py  bottle.py  dive_briefing.py  dive_planner.py  helpers.py  parameters.py
